# DaSHI-Business-Card-Website

backend/: .gitignore  docker-compose.yaml  pyproject.toml
backend/backend/: settings.py  urls.py
backend/backend/config/: __init__.py  settings.yaml
backend/news/: admin.py  apps.py  models.py  urls.py  views.py
backend/news/migrations/: 0001_initial.py  0004_topic_news_topics.py
backend/partners/: apps.py  models.py
backend/partners/migrations/: 0001_initial.py  0002_alter_partner_whatsapp.py
frontend/: .gitignore  next.config.js  package-lock.json  package.json
frontend/.lh/pages/: index.js.json
frontend/.lh/styles/: About.module.css.json  Buyers.module.css.json  Contacts.module.css.json  Guarantee.module.css.json  MainPage.module.css.json  Partners.module.css.json  Products.module.css.json  globals.css.json
frontend/components/: Dropdown.js
frontend/components/universal/: Answer.js  FeedbackForm.js  Footer.js  Header.js  LeftMenu.js  Question.js  QuestionFormModal.js
frontend/pages/: index.js
frontend/pages/about/: index.js
frontend/pages/buyers/: index.js
frontend/pages/contacts/: index.js
frontend/pages/guarantee/: index.js
frontend/pages/news/: index.js
frontend/pages/partners/: index.js
frontend/pages/products/: index.js
frontend/styles/: About.module.css  Buyers.module.css  Contacts.module.css  Guarantee.module.css  MainPage.module.css  News.module.css  Partners.module.css  Products.module.css  globals.css
frontend/styles/components/: Answer.module.css  Components.module.css  Dropdown.module.css  FeedBackForm.module.css  (+3 more)
(+13 files in other folders)
